# Kaggle-ClimSim-2024

./: .gitignore  .pre-commit-config.yaml  README.md
climsim-2024/: Makefile  README.md  pyproject.toml
climsim-2024/notebooks/: dataset_stats.ipynb  generate_submission.ipynb  generate_tiny_dataset.ipynb  lightning.ipynb  prelim_test.ipynb  torch.ipynb  train.py  train_tiny.py  visualize_dataset_statistics.ipynb
climsim-2024/src/: __init__.py  env.py  logger.py  prelim_test.ipynb  utils.py
climsim-2024/src/core/: workerpool.py
climsim-2024/src/kaggle/: __init__.py  kaggle.py  submission.py
climsim-2024/src/pytorch/: __init__.py  trainer.py  utils.py
climsim-2024/src/pytorch/core/dataset/: __init__.py  kaggle.py  loader.py
climsim-2024/src/pytorch/core/models/: __init__.py  mlp.py  utils.py
climsim-2024/src/pytorch/data/: arrow_loader.py  kaggle.py  loader.py  parquet.py  parquet_tiny.py  polars_loader.py  statistics.py
climsim-2024/src/pytorch/dataset/: __init__.py  base.py  buffered_parquet.py  file.py  memory_parquet.py  statistics.py
climsim-2024/src/pytorch/loss/: __init__.py  r2.py
climsim-2024/src/pytorch/lr_schedulers/: __init__.py  cosine_decay.py
climsim-2024/src/pytorch/models/: __init__.py  base.py  cnn.py  fastkan.py  mlp.py  transformer.py  utils.py
climsim-2024/src/schemas/: __init__.py  climsim.py  constants.py  math.py  visualization.py
climsim-2024/src/visualization/: base.py  performance.py
climsim-2024/tests/: test_import.py
climsim-2024/workspace/: generate_submission.ipynb  generate_tiny_dataset.ipynb  train.py
