[tool.poetry]
name = "src"
version = "0.1.0"
description = ""
authors = ["wyhwong <wyhwong@link.cuhk.edu.hk>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
# These are dependeniencies for pytorch
# Note that we use cuda 11.8 and python 3.11 as base
torch = { url = "https://download.pytorch.org/whl/cu118/torch-2.3.0%2Bcu118-cp311-cp311-linux_x86_64.whl#sha256=4888984f292c2dfa12e49b951356c692a096a9c4790efab7fdbfc8db8cd8f13f"}
torchaudio = { url = "https://download.pytorch.org/whl/cu118/torchaudio-2.3.0%2Bcu118-cp311-cp311-linux_x86_64.whl#sha256=c0f008180e0f3d12ad92c37592d2a5c7d297d2339eb2d839c10cc064699be486"}
torchvision = { url = "https://download.pytorch.org/whl/cu118/torchvision-0.18.0%2Bcu118-cp311-cp311-linux_x86_64.whl#sha256=469dc933a3c868886b4aacb33421ad73ce6cfedc1641e047386f38a341551bc7"}
matplotlib = "^3.8.4"
seaborn = "^0.13.2"
ipykernel = "^6.29.4"
tqdm = "^4.66.2"

[tool.poetry.group.dev.dependencies]
pytest = "^8.1.1"
black = "^24.4.2"
pylint = "^3.1.0"
mypy = "^1.10.0"
isort = "^5.13.2"
pre-commit = "^3.7.0"

[tool.black]
line-length = 120

[tool.isort]
line_length = 120
include_trailing_comma = true
lines_after_imports = 2

[tool.mypy]
exclude = ["tests",]

[[tool.mypy.overrides]]
module = "*.*"
ignore_missing_imports = true


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
