[tool.poetry]
name = "src"
version = "0.1.0"
description = ""
authors = ["wyhwong <wyhwong@link.cuhk.edu.hk>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
# These are dependeniencies for pytorch
# Note that we use cuda 11.8 and python 3.11 as base
torch = { url = "https://download.pytorch.org/whl/cu118/torch-2.3.0%2Bcu118-cp311-cp311-linux_x86_64.whl#sha256=4888984f292c2dfa12e49b951356c692a096a9c4790efab7fdbfc8db8cd8f13f"}
matplotlib = "^3.8.4"
seaborn = "^0.13.2"
ipykernel = "^6.29.4"
tqdm = "^4.66.2"
numpy = "^1.26.4"
pyarrow = "^16.0.0"
polars = "^0.20.23"
lightning = "^2.2.4"
tensorboard = "^2.16.2"
torch-tb-profiler = "^0.4.3"

[tool.poetry.group.dev.dependencies]
pytest = "^8.1.1"
black = "^24.4.2"
pylint = "^3.1.0"
mypy = "^1.10.0"
isort = "^5.13.2"
pre-commit = "^3.7.0"

[tool.black]
line-length = 120

[tool.isort]
line_length = 120
include_trailing_comma = true
lines_after_imports = 2

[tool.mypy]
exclude = ["tests",]

[[tool.mypy.overrides]]
module = "*.*"
ignore_missing_imports = true


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
